force-app/main/default/objects/Ramp_Custom_Dimension__mdt/Ramp_Custom_Dimension__mdt.object-meta.xml
<CustomObject>
    <label>Ramp Custom Dimension</label>
    <pluralLabel>Ramp Custom Dimensions</pluralLabel>
</CustomObject>