force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/Active_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Active_Field_API_Name__c</fullName>
    <label>Active Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>