force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/Fail_Sync_On_Unresolved_Option__c.field-meta.xml
<CustomField>
    <fullName>Fail_Sync_On_Unresolved_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fail Sync On Unresolved Option</label>
    <type>Checkbox</type>
</CustomField>