force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/JE_Line_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>JE_Line_Field_API_Name__c</fullName>
    <label>JE Line Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>