force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/Label_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Field_API_Name__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <label>Label Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>