force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/Payable_Line_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Payable_Line_Field_API_Name__c</fullName>
    <label>Payable Line Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>