force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/Ramp_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Field_Label__c</fullName>
    <description>The label of the matching custom field in Ramp's accounting field configuration. Required: paired with Object_API_Name__c to derive the field's deterministic id, so it must always be set.</description>
    <label>Ramp Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>