force-app/main/default/objects/Ramp_Custom_Dimension__mdt/fields/Ramp_Option_Id_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Option_Id_Field_API_Name__c</fullName>
    <label>Ramp Option Id Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>